--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Daily Update OEIS Printed Mirror
 
-# on:
-#   schedule:
-#     - cron: '0 8 * * *'
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '0 8 * * *'
+# on: workflow_dispatch
 
 jobs:
   Update-Printed-Mirror:
