--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Daily Update OEIS Printed Mirror
 
-on:
-  schedule:
-    - cron: '0 8 * * *'
-# on: workflow_dispatch
+# on:
+#   schedule:
+#     - cron: '0 8 * * *'
+on: workflow_dispatch
 
 jobs:
   Update-Printed-Mirror:
@@ -60,8 +60,8 @@ jobs:
     - name: Compile TeX File into pdf File
       run: |
         cd print
-        xelatex -synctex=1 -interaction=nonstopmode oeis.tex
-        xelatex -synctex=1 -interaction=nonstopmode oeis.tex
+        xetex -synctex=1 -interaction=nonstopmode oeis.tex
+        xetex -synctex=1 -interaction=nonstopmode oeis.tex
 
     - name: Commit and Push Changes
       run: |
