--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,22 +53,14 @@ jobs:
         g++ main.cpp -o main -std=c++11
         sudo chmod 777 main
         ./main
-
-    - name: Set up TeX Live
-      uses: teatimeguest/setup-texlive-action@v2
-      with:
-        packages: >-
-          scheme-basic
-          latexmk
       
     - name: Compile TeX File into pdf File
-      run: |
-        cd print
-        latexmk -xelatex -interaction=nonstopmode -synctex=1 "oeis.tex"
-        latexmk -xelatex -interaction=nonstopmode -synctex=1 "oeis.tex"
-        # xetex -synctex=1 -interaction=nonstopmode oeis.tex
-        # xetex -synctex=1 -interaction=nonstopmode oeis.tex
-
+      uses: dante-ev/latex-action@latest
+      with:
+        root_file: ./print/oeis.tex
+        compiler: xelatex
+        args: -interaction=nonstopmode -synctex=1
+        
     - name: Commit and Push Changes
       run: |
         git add .
