--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Daily Update OEIS Printed Mirror
 
-on:
-  schedule:
-    - cron: '0 8 * * *'
-# on: workflow_dispatch
+# on:
+#   schedule:
+#     - cron: '0 8 * * *'
+on: workflow_dispatch
 
 jobs:
   Update-Printed-Mirror:
@@ -26,7 +26,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x
+        python-version: 3.11
 
     - name: Install dependencies
       run: |
