--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Daily Update OEIS Printed Mirror
 on:
   schedule:
     - cron: '0 8 * * *'
-# on: workflow_dispatch
+on: workflow_dispatch
 
 jobs:
   Update-Printed-Mirror:
