--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Daily Update OEIS Printed Mirror
 
-on:
-  schedule:
-    - cron: '0 8 * * *'
+# on:
+#   schedule:
+#     - cron: '0 8 * * *'
 on: workflow_dispatch
 
 jobs:
