--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Daily Update OEIS Printed Mirror
 
-on:
-  schedule:
-    - cron: '0 8 * * *'
-# on: workflow_dispatch
+# on:
+  # schedule:
+  #   - cron: '0 8 * * *'
+on: workflow_dispatch
 
 jobs:
   Update-Printed-Mirror:
@@ -36,7 +36,7 @@ jobs:
     - name: Get Latest Data
       run: |
         cd prepare
-        wget http://oeis.org/stripped.gz
+        curl -O http://oeis.org/stripped.gz
         gzip -d stripped.gz
         g++ a.cpp -o a -std=c++11
         sudo chmod 777 a
